Fix bug when portfolio arrow wraps alone

--- a/css/main.scss
+++ b/css/main.scss
@@ -512,6 +512,7 @@ header h1 {
             a {
               color: $sec-color;
               white-space: nowrap;
+              display: inline-block;
 
               &:hover {
                 color: $sec-color-dark;
